FIX overflow language list

--- a/public/sass/profile.sass
+++ b/public/sass/profile.sass
@@ -554,7 +554,6 @@ button.close
 	//margin-bottom: 8px
 
 #languages-list
-	overflow: hidden
 	div
 		margin-bottom: 10px
 
